好啊，越学学回旋啊

--- a/9.浮点数.md
+++ b/9.浮点数.md
@@ -49,7 +49,15 @@ $$
   <img src="./media_9/1.png" alt="王道图片" style="zoom:50%;"/>
 </div>
 
-其中，如果指数全为`1`，但是尾数不全为1，则为*NaN*。
+其中，如果指数全为`1`，但是尾数不全为0，则为*NaN*。
+
+## 无穷大
+
+如果指数指数全为1，但是尾数全为零, 便是无穷大。
+
+如果符号位是0，为正无穷大。
+
+如果符号位是1，为负无穷大。
 
 ## 规格化值
 
