这对于事情非常有补益

--- a/9.浮点数.md
+++ b/9.浮点数.md
@@ -43,13 +43,9 @@ $$
 1. 无穷大
 2. NaN
 
-## 特殊值
-
 <div align="center">
   <img src="./media_9/1.png" alt="王道图片" style="zoom:50%;"/>
 </div>
-
-其中，如果指数全为`1`，但是尾数不全为0，则为*NaN*。
 
 ## 无穷大
 
@@ -58,6 +54,10 @@ $$
 如果符号位是0，为正无穷大。
 
 如果符号位是1，为负无穷大。
+
+## NAN
+
+如果指数全为`1`，但是尾数不全为0，则为*NaN*。
 
 ## 规格化值
 
@@ -72,8 +72,8 @@ $$
 
 其中`e`即为`exp`，`bias` 是偏置量，它的值为$2^{k-1} - 1$，其中`k`为 `exp`的位数，故:
 
-- 在单精度中，$\text{bias} = 2^{8 - 1} = 2^{7} - 1 = 128 - 1 = 127$
-- 在双精度中，$\text{bias} = 2^{11 -1} = 2^{10} - 1 = 1024 - 1 = 1023$
+- 在单精度中，$\text{bias} = 2^{8 - 1} - 1 = 2^{7} - 1 = 128 - 1 = 127$
+- 在双精度中，$\text{bias} = 2^{11 -1} - 1 = 2^{10} - 1 = 1024 - 1 = 1023$
 
 其中`f`为`feac`表示的数，范围$0 \le f < 1$
 
@@ -92,7 +92,7 @@ $$
 - $E = 1 - \text{bias}$
 - $M = f$
 
-所以一个规格化数，具体可以表示为：$V = (1)^{\text{sign}} \times 0.\text{frac} \times 2^{(1-\text{bias})}$
+所以一个规格化数，具体可以表示为：$V = (-1)^{\text{sign}} \times 0.\text{frac} \times 2^{(1-\text{bias})}$
 
 ## 浮点数的加减运算
 
@@ -104,3 +104,68 @@ $$
 </div>
 
 在浮点运算中，运算结果超出尾数表示范围却不一定溢出，只有规格化后阶码超出所能表示的范围时，才发生溢出。
+
+## Rust代码演示
+
+```rust
+#[cfg(test)]
+#[allow(clippy::unusual_byte_groupings)]
+mod tests {
+    use std::ops::Neg;
+
+    #[test]
+    fn subnormal_number() {
+        assert_eq!(
+            0b_0_00000000_10000000000000000000000,
+            (f32::MIN_POSITIVE / 2.0).to_bits()
+        );
+    }
+
+    #[test]
+    fn max_number() {
+        assert_eq!(0b_0_11111110_11111111111111111111111, f32::MAX.to_bits());
+    }
+
+    #[test]
+    fn min_positive_num() {
+        assert_eq!(
+            0b_0_00000001_00000000000000000000000,
+            f32::MIN_POSITIVE.to_bits()
+        )
+    }
+
+    #[test]
+    fn min_negative_num() {
+        assert_eq!(
+            0b_1_00000001_00000000000000000000000,
+            f32::MIN_POSITIVE.neg().to_bits()
+        );
+    }
+
+    #[test]
+    fn min_number() {
+        assert_eq!(0b_1_11111110_11111111111111111111111, f32::MIN.to_bits());
+    }
+
+    #[test]
+    fn non_number() {
+        assert_eq!(0b_0_11111111_10000000000000000000000, f32::NAN.to_bits());
+    }
+
+    #[test]
+    fn positive_infinity() {
+        assert_eq!(
+            0b_0_11111111_00000000000000000000000,
+            f32::INFINITY.to_bits()
+        );
+    }
+
+    #[test]
+    fn negative_infinity() {
+        assert_eq!(
+            0b_1_11111111_00000000000000000000000,
+            f32::NEG_INFINITY.to_bits()
+        );
+    }
+}
+```
