整理一下笔记

--- a/9.浮点数.md
+++ b/9.浮点数.md
@@ -1,5 +1,12 @@
 # 浮在空中，就可以躲避地面上的苦痛了吗？
 
+## 十进制小数转二进制小数
+
+- 这不会不行啊，顶不住啊(悲
+<div align="center">
+  <img src="./media_9/13.png" alt="13" style="zoom:75%;"/>
+</div>
+
 ## IEEE-754
 
 $$
