--- a/孽海花.md
+++ b/孽海花.md
@@ -139,3 +139,9 @@ wsl --export Ubuntu-22.04 E://wslubuntu//Ubuntu-22.04.tar
 wsl --unregister Ubuntu-22.04
 wsl --import Ubuntu-22.04 E://wslubuntu E://wslubuntu//ubuntu-22.04.tar
 ```
+
+## git 分支可视化
+
+```bash
+alias graph='git log --graph --oneline --decorate --all'
+```
