--- a/12.内存管理.md
+++ b/12.内存管理.md
@@ -33,6 +33,10 @@ DRAM 需要每隔一段时间就刷新一下，称为刷新周期。
 
 ![14](./media_9/14.png)
 
+DRAM 不光每个一段时间就需要刷新一下，而且每次读写之后，还需要消耗一段时间进行恢复。
+
+![18](./media_9/18.png)
+
 ## SRAM 与 DRAM
 
 ![15](./media_9/15.png)
@@ -46,3 +50,53 @@ DRAM 需要每隔一段时间就刷新一下，称为刷新周期。
 ![17](./media_9/17.png)
 
 基本现在我只见过 Flash 和 SSD 。
+
+## DRAM 级联
+
+### 单体多字存储器
+
+一个超长的的数组，就是咱们平时幻想中的内存条。
+
+- 哎，理想
+
+### 多体并行存储器
+
+其实现在都是好几个内存条做级联的。
+
+我的还是一个8G，一个32G QAQ
+
+#### 高位交叉编址（顺序方式）
+
+![20](./media_9/20.png)
+
+其实没啥用，仍然是串行读取。
+
+> （至少在考研中）一个内存条，只要有一个字节被读写操作，整个内存条，这个硬件都要经过一个t时间的恢复时间之后才能被再次读写。
+
+#### 低位交叉编址（交叉方式）
+
+![21](./media_9/21.png)
+
+实际上体号是能直接看出来的，转换为二进制后直接截取最低位就是体号。
+
+采用**低位交叉编址**之后，可以采用流水线的方式进行并行存取。
+
+设存取周期为`T`，存取时间为`r`，为了使流水线不间断，应保证流水线的级数 `m`
+
+$$
+m >= T / r
+$$
+
+在最理想的情况下
+
+$$
+m = T / r
+$$
+
+![23](./media_9/23.png)
+
+这样存取`m`个字所需的时间为
+
+$$
+t_1 = T + (m - 1) * r
+$$
