--- a/12.内存管理.md
+++ b/12.内存管理.md
@@ -100,3 +100,13 @@ $$
 $$
 t_1 = T + (m - 1) * r
 $$
+
+但并不是采用交叉编址的方式就可以彻底规避访问冲突，只有在访问的内存地址是连续的时候，流水线能够顺利进行的时候，才可以避免访问冲突导致的等待时间。
+
+## 启示录
+
+计算机读取数据是按照机器字对齐的方式来读取的。
+
+流水线也是按照机器字对齐的方式来进行的。
+
+> 哎，按页对齐，不对齐就panic
