--- a/12.内存管理.md
+++ b/12.内存管理.md
@@ -1,4 +1,4 @@
-# 你来我往，谁为先手？
+# 局里局外，一生好走？
 
 ## 按存取方式分类
 
@@ -110,3 +110,13 @@ $$
 流水线也是按照机器字对齐的方式来进行的。
 
 > 哎，按页对齐，不对齐就panic
+
+## 内存条与DRAM芯片
+
+一个内存条是由多个DRAM芯片通过内部的级联组合而成的。
+
+![24](./media_9/24.png)
+
+所以说`内存条`是内存条，`DRAM芯片`是DRAM芯片。
+
+不过暂时没有看到针对内存条的知识点和考题，基本全是关于DRAM芯片的。
