--- a/12.内存.md
+++ b/12.内存.md
@@ -98,7 +98,7 @@ $$
 这样存取`m`个字所需的时间为
 
 $$
-t_1 = T + (m - 1) * r
+t_1 = T + (m - 1) \cdot r
 $$
 
 但并不是采用交叉编址的方式就可以彻底规避访问冲突，只有在访问的内存地址是连续的时候，流水线能够顺利进行的时候，才可以避免访问冲突导致的等待时间。
