--- a/13.磁盘.md
+++ b/13.磁盘.md
@@ -10,6 +10,8 @@
 
 磁盘的最小存储单位是扇区，即使是存储一个字节，也要消耗掉一个扇区。
 
+但实际上文件系统的簇，或者是VFS的section的单位都是扇区的整数倍，所以存储一个字节，占用的扇区取决于当前文件系统的最小单位。
+
 磁盘中的任何数据，无论是普通的数据还是标志磁盘信息的数据，都需要被调入到内存后才能被程序分析和使用。
 
 ### 磁盘的组成
@@ -131,6 +133,14 @@ $$
 | -------------------------- | ---------------------------------------------------- |
 | 消除了两端磁道请求的不公平 | 基本没有(当前的磁道不断有请求，就会使得磁头卡在那里) |
 
+#### 5. LOOK 调度和 C-LOOK 调度
+
+SCAN 算法和 C-SCAN 算法的改进，这两个算法中磁头总是严格地遵循从盘面的一段到另一端，显然，在实际使用时还可以改进，即磁头移动只需要到达最远端的一个请求即可返回，不需要到达磁盘端点。
+
+<div align="center">
+  <img src="./media_9/34.png" alt="34" style="zoom:70%;"/>
+</div>
+
 ### 文件系统在磁盘中的结构
 
 磁盘在没有安装对应的文件系统时（例如fat32），就是一个非常普通的机械设备，甚至连自己哪个块存放了数据，哪个块是坏的都不知道，只有磁盘加上文件系统之后才能开始工作。
@@ -149,7 +159,7 @@ $$
 
 引导块（boot block），MBR执行引导块中的程序后，该程序负责启动该分区中的操作系统。每个分区都从一个引导块开始，即使它不含有一个可启动的操作系统。
 
-#### 3. 超级块（super block）
+#### 3. 超级块（super block）（操作系统需要）
 
 包含文件系统的所有关键信息，在计算机启动时，或者在该文件系统首次使用时，超级快都会被读入内存，超级块中的典型信息包括分区的块的数量，块的大小，空闲块的数量和指针，空闲的FCB（在Linux中就是指inode）数量和FCB指针（指示了具体某个文件的inode在哪个块中）等。
 
