--- a/14.文件.md
+++ b/14.文件.md
@@ -1,5 +1,11 @@
 # 即使再过一千年，人们也会记得FCB
 
+## 一番言いたいこと
+
+在文件系统中，文件存贮的最小单位是**簇**，一个**簇**等于若干个盘块。
+
+注意文件的最小存储单位和磁盘的最小存储单位以及内存的最小存储单位直接的区别。
+
 ## 文件控制块（ FCB / INode ）
 
 一个文件只对应一个 FCB（ INode ），无论这个文件有多大，INode 究其根本就是一个**胖指针**。
@@ -28,14 +34,79 @@ INode 在磁盘中一定是连续存放的。
 
 ## 文件的物理结构
 
+### 连续分配
+
+> 其实就是堆分配
+
 INode 中读取到的文件数据在磁盘块的分布信息也是不一定的，取决于文件系统的具体安排，有可能获得是获得了一个盘块首地址和一个盘块长度。
 
-此为—— 连续分配。
+| 优点                                       | 缺点                                                               |
+| ------------------------------------------ | ------------------------------------------------------------------ |
+| 作业访问磁盘时所需要的寻道数和寻道时间最小 | 1.增大文件长度时需要直接整体移动到一个新的地方。 2. 会增加磁盘碎片 |
 
-说白了就是—— 堆分配
+### 链接分配
 
-这种排序使作业访问磁盘时所需要的寻道数和寻道时间最小。
+#### 隐式链接
 
-增大文件长度时也和堆的策略一样，直接整体移动到一个新的地方。这也是连续分配最大的问题。
+> 其实就是传统的链表的数据结构。
 
-同时会增加磁盘碎片。
+目录项中含有第一块的指针和最后一块的指针。每个盘块都含有指向文件下一个盘块的指针。
+
+<div align="center">
+  <img src="./media_10/3.png" alt="3" style="zoom:45%;"/>
+</div>
+
+- 缺点
+  1. 只能顺序访问，随机访问效率低
+  2. 稳定性低，容易导致链表中的指针丢失或损坏，导致文件系统的丢失
+
+#### 显式链接
+
+> 其实就是 FAT32 的管理方式
+
+<div align="center">
+  <img src="./media_10/4.png" alt="4" style="zoom:60%;"/>
+</div>
+
+FAT 表放在一个盘块或者簇中，在系统启动时就会被读入内存，因此查找记录的过程是在内存中进行的。
+
+显著地提高了检索速度，而且明显减少了访问磁盘的次数。
+
+<div align="center">
+  <img src="./media_10/5.png" alt="5" style="zoom:60%;"/>
+</div>
+
+- 缺点
+  1. FAT 表需要占用较大的内存空间。实际上，在打开某个文件时，只需将该文件对应的盘块的标号调入内存即可，完全没必要将整个 FAT 调入内存。
+
+#### 索引分配
+
+> 其实就是 INode 方式
+
+索引分配将每个文件所有的盘块号都集中放在一起构成**索引块（表）**
+
+<div align="center">
+  <img src="./media_10/6.png" alt="6" style="zoom:40%;"/>
+</div>
+
+<br/>
+
+<div align="center">
+  <img src="./media_10/7.png" alt="7" style="zoom:40%;"/>
+</div>
+
+#### 混合索引分配
+
+> 是大杂烩吧。
+
+<div align="center">
+  <img src="./media_10/8.png" alt="8" style="zoom:36%;"/>
+</div>
+
+<div align="center">
+  <img src="./media_10/9.png" alt="9" style="zoom:54%;"/>
+</div>
+
+<div align="center">
+  <img src="./media_10/10.png" alt="10" style="zoom:40%;"/>
+</div>
