--- a/15.地址.md
+++ b/15.地址.md
@@ -1,4 +1,4 @@
-# 一切计算机的历史，都是地址转换的历史
+# 一切安全的历史，都是地址的历史
 
 ## MMU 与 CR3 与 CRX
 
@@ -196,4 +196,22 @@ typedef union _L3PTE
 
 ## KVA Shadow (Windows 特供版)
 
+<div align="center">
+  <img src="./media_10/26.png" alt="26" style="zoom:30%;"/>
+</div>
+
+<br/>
+
 说白了就是影子页表，一个进程有两套页表。
+
+<div align="center">
+  <img src="./media_10/27.png" alt="27" style="zoom:30%;"/>
+</div>
+
+系统维护着两套一级页表，当发生系统调用时，程序会先进入用户下的内核跳板，然后在跳板代码的作用下进入内核页表，完成系统调用代码，然后再通过跳板代码，回到用户模式。
+
+用户页表只映射了很少部分的内核代码，内核页表和用户页表映射了同一套跳板代码。
+
+同时每个页表条目新加了一个控制位 —— **XD**
+
+KVA Shadow 利用这个实现了软件的 **SMEP**(Software Supervisor Mode Execution Prevention ) 功能。
