--- a/15.地址（江湖）.md
+++ b/15.地址（江湖）.md
@@ -208,10 +208,16 @@ typedef union _L3PTE
   <img src="./media_10/27.png" alt="27" style="zoom:30%;"/>
 </div>
 
-系统维护着两套一级页表，当发生系统调用时，程序会先进入用户下的内核跳板，然后在跳板代码的作用下进入内核页表，完成系统调用代码，然后再通过跳板代码，回到用户模式。
-
-用户页表只映射了很少部分的内核代码，内核页表和用户页表映射了同一套跳板代码。
+系统维护着两套一级页表，当发生系统调用时，程序会先进入用户下的内核跳板，然后在跳板代码的作用下进入内核页表，完成系统调用，然后再回到用户模式。
 
 同时每个页表条目新加了一个控制位 —— **XD**
 
 KVA Shadow 利用这个实现了软件的 **SMEP**(Software Supervisor Mode Execution Prevention ) 功能。
+
+内核态页表中用户条目中 **XD** 都为 1 ，进程在内核态页表下只能读写用户代码，但不能执行。
+
+> 内核态页表和用户态页表的区别
+
+1. 内核态页表的用户代码项的 XD 都为 1
+2. 用户态页表的内核代码项压根没有映射真正的内核代码，而是启用了新的枝叶（跳板代码）
+3. 在自映射条目中，内核态目录中的自映射条目和用户态目录的自映射条目位置相同，但是指向的物理页面却不同。（废话， 毕竟是两个页表，物理地址肯定不同）
