--- a/16.地址（朝廷）.md
+++ b/16.地址（朝廷）.md
@@ -53,3 +53,97 @@ $$
 <br/>
 
 所以总结为：还是首次适应算法好啊。
+
+## 一期总结
+
+为什么要使用分页？
+
+因为要解决内存碎片问题。提高内存的利用率。
+
+## 局部性原理
+
+1. 时间局部性
+2. 空间局部性
+
+## 驻留级与工作集
+
+驻留级：指请求分页存储管理中给进程分配的内存块的集合。
+
+工作集：指在某段时间间隔里，进程实际访问页面的集合。
+
+<div align="center">
+  <img src="./media_11/6.png" alt="6" style="zoom:70%;"/>
+</div>
+
+## 内存分配策略
+
+### 固定分配与可变分配
+
+固定分配：一个进程分配的页的数量是固定的，永远都会有这么几个。
+
+可变分配：一个进程分配的页的数量是不固定的，是看情况的，如果一个进程在一段时间内总是发生缺页，就多分配几个，如果在一段时间内用的页少，就少分配几个。
+
+### 局部置换与全局置换
+
+局部置换：如果一个进程发生了缺页，从自己分配的页中进行调度。
+
+> 经典剪刀差✂
+
+全局置换：如果一个进程发生了缺页，就从别的进程中分配的页中去调度。
+
+> 快乐铁血，限时回归🔨
+
+<div align="center">
+  <img src="./media_11/7.png" alt="7" style="zoom:40%;"/>
+</div>
+
+<br/>
+
+可见 **固定分配**与**全局置换**是相互冲突的
+
+## 页面置换算法
+
+### 最佳（ OPT ）置换算法
+
+<div align="center">
+  <img src="./media_11/8.png" alt="8" style="zoom:40%;"/>
+</div>
+
+### 先进先出（ FIFO ） 置换算法
+
+<div align="center">
+  <img src="./media_11/9.png" alt="9" style="zoom:40%;"/>
+</div>
+
+### 最近最久未使用（ LRU ）置换算法
+
+<div align="center">
+  <img src="./media_11/10.png" alt="10" style="zoom:40%;"/>
+</div>
+
+### 时钟（ CLOCK ）置换算法
+
+<div align="center">
+  <img src="./media_11/11.png" alt="11" style="zoom:50%;"/>
+</div>
+
+其实跟 **cache** 的置换算法基本差不多。
+
+### 改进型（ CLOCK ）置换算法
+
+把进程的页按照下面这样进行分类
+
+1. 上等马：**最近访问位**为 1，而且**脏位**为 1 的页。
+2. 中等马：**最近访问位**为 1，而且**脏位**为 0 的页。
+3. 大司马：**最近访问位**为 0，而且**脏位**为 1 的页。
+4. 牛马🐂：**最近访问位**为 0，而且**脏位**为 0 的页。
+
+然后发生缺页中断的时候，第一圈找**牛马🐂**，找不到就第二圈找**大司马**，还找不到就找**中等马**，第四圈最后一圈就找**上等马**。
+
+算法具体实现：
+
+<br/>
+
+<div align="center">
+  <img src="./media_11/12.png" alt="12" style="zoom:40%;"/>
+</div>
