--- a/16.地址（朝廷）.md
+++ b/16.地址（朝廷）.md
@@ -65,6 +65,10 @@ $$
 1. 时间局部性
 2. 空间局部性
 
+## TLB （快表）
+
+其实就是页目录项的**cache**，一般在访问页目录之前会先查看一下 TLB，如果访问成功的话，就直接按照 TLB 的内容直接访问物理内存。
+
 ## 驻留级与工作集
 
 驻留级：指请求分页存储管理中给进程分配的内存块的集合。
@@ -81,7 +85,7 @@ $$
 
 固定分配：一个进程分配的页的数量是固定的，永远都会有这么几个。
 
-可变分配：一个进程分配的页的数量是不固定的，是看情况的，如果一个进程在一段时间内总是发生缺页，就多分配几个，如果在一段时间内用的页少，就少分配几个。
+可变分配：一个进程分配的页的数量是不固定的，是看情况的，如果一个进程在一段时间内总是发生缺页，就多分配几个，如果在一段时间内用的页少，就少分配几个，或者看系统当前运行的进程数量来决定每个进程能分配的页面数量。
 
 ### 局部置换与全局置换
 
@@ -147,3 +151,19 @@ $$
 <div align="center">
   <img src="./media_11/12.png" alt="12" style="zoom:40%;"/>
 </div>
+
+## 抖动
+
+<div align="center">
+  <img src="./media_11/13.png" alt="13" style="zoom:40%;"/>
+</div>
+
+## 2 期总结
+
+一个进程的一级页表是一定在内存中的，但是二级之后的页表未必在内存中，有可能也需要调度，即 —— 访问一个虚拟地址可能要经过先把页表调入内存中再把对应的页调入内存中之后才能访问地址。
+
+进行虚拟地址转换的时候，首先要访问页表，这本身就是一次访问内存，然后再根据页表的内容访问具体的页面，可能直接访问对应内存或者是发生缺页中断。
+
+所以说在虚拟内存模式下，表面上访问了一个虚拟地址，实际上背后访问了好几次物理内存。
+
+> 哎，代价。
