--- a/3.中断与DMA与IO中断(朝廷＆江湖).md
+++ b/3.中断与DMA与IO中断(朝廷＆江湖).md
@@ -27,13 +27,15 @@ for (int i = 0, i < 1 GB / 4; i++) {
 2. CPU允许中断及开中断（异常和不可屏蔽中断不受此限制）
 3. 一条指令执行完毕（异常不受此限制），且没有更紧迫的任务。
 
+CPU 在每条指令执行结束前，都要发中断查询信号，若有中断请求，则 CPU 进入中断响应阶段。
+
 所以我们可以看出对于普通的中断，都是在CPU执行完当前指令之后再执行(自然这里就包括了I/O中断)。
 
 ### 中断处理过程
 
 - 关中断
 - 保存断点
-- 终端服务程序寻址
+- 中断服务程序寻址
 
 以上几步我们称为**中断隐指令** (所谓 int 80 如此是也)
 
