--- a/7.冯诺依曼结构.md
+++ b/7.冯诺依曼结构.md
@@ -56,6 +56,18 @@ MDR通过数据线与主存相连。
 
 - 其中MAR和MDR是CPU与主存之间的交互窗口
 
+## 关于 **PC**
+
+与 X64 **IP**，RISC-V 的 **PC** 不同，考研中的**PC**更多的被称为*程序计数器*，每次执行一条指令之后就会$(PC) = PC + 1$，这个就是每条指令的长度都是一样的，都是 RISC 类型的指令，**PC** 就是单纯的表示指令的计数器。
+
+此时 **PC** 的容量计算公式就是
+
+<br/>
+
+$$
+\text{PC的最大容量} = \frac{\text{虚拟地址的最大值}}{\text{一条指令的长度}}
+$$
+
 ## 违背常识?
 
 在冯诺依曼计算机中，CPU是如何区别存储其中的指令和数据的？
