--- a/19.流水线.md
+++ b/19.流水线.md
@@ -1,4 +1,8 @@
-# 寻觅
+# 种风的人，收获的是风暴
+
+不过考研只考顺序执行，不考乱序执行。
+
+> 考乱序执行只能当场暴毙力 ~
 
 ## 处理机的并行性
 
@@ -9,3 +13,71 @@
 ### 超标量
 
 空间上的并行技术，一个时钟周期内同时运行多条指令。
+
+### 超标量流水线技术
+
+一个时钟周期中发射多条指令，同时结合流水线技术。
+
+<div align="center">
+  <img src="./media_12/18.png" alt="12/18" style="zoom:70%;"/>
+</div>
+
+### 超长指令字技术
+
+<div align="center">
+  <img src="./media_12/19.png" alt="12/19" style="zoom:70%;"/>
+</div>
+
+### 超流水线技术
+
+<div align="center">
+  <img src="./media_12/20.png" alt="12/20" style="zoom:60%;"/>
+</div>
+
+## 五级流水线
+
+> 这既是考研目前的考试标准，同时也是现在 RISC-V 所采取的基本流水线方法。
+
+1. 取指 (IF)：从指令寄存器或 cache 中取指令。
+2. 译码/ 读寄存器 (ID)：操作控制器对指令进行译码，同时从存储器中读取操作数。（也就是说这个这个时候，指令所需要的数值就从寄存器中读取了）
+3. 执行/ 计算地址 (EX): 执行运算操作或计算地址。 （比如 **add** 指令进行运算，或者是间接寻址 **[rax + 0x18]**，从第二步中获得的寄存器值加上指令中的偏移量获得真正的地址信息）
+4. 访存 (MEM): 对存储器进行读/ 写操作。（对于 **add** 这样的根本不涉及访存的操作，这一步流水线就是单纯的空操作）
+5. 写回 (WB): 将指令执行结果写回存储器。（对于 **store** 这样的不写回寄存器的操作，这一步流水线也是单纯的空操作，且不能跳过去，需要进行）
+
+<br/>
+
+<div align="center">
+  <img src="./media_12/21.png" alt="12/21" style="zoom:60%;"/>
+</div>
+
+<br/>
+
+在理想情况下，每个时钟周期都有一个指令进入流水线，每个时钟周期都有一条指令完成，每条指令的时钟周期数 （ 即 CPI ）都为 1 。
+
+## 流水线对指令集的要求
+
+<div align="center">
+  <img src="./media_12/22.png" alt="12/22" style="zoom:60%;"/>
+</div>
+
+## 流水线的逻辑结构
+
+每个流水段后面都要添加一个**流水段寄存器**，用于锁存本段处理完的所有数据，以保证本段的执行结果能在下一个时钟周期给下一流水线使用。
+
+各种存储器和数据寄存器均采用统一时钟**CLK**进行同步，每来一个时钟，各段处理完的数据都将锁存到段尾的流水线寄存器中，作为后段的输入。
+
+同时，当前段也会收到前段通过流水段寄存器传递过来的数据。
+
+<div align="center">
+  <img src="./media_12/23.png" alt="12/23" style="zoom:50%;"/>
+</div>
+
+<br/>
+
+由于**流水段寄存器**的机制，_I4_ 的**IF**指令只能在第七个时钟周期执行，而不能在第四个时钟周期执行。
+
+因为如果*I4* 的**IF**指令在第四个时钟周期运行，就会导致 CPU 的 **IF寄存器** 被覆盖，到第八个时钟周期时，CPU 执行*I3*的**EX**阶段时执行的却是**I4**的**IF**内容，造成错误。
+
+<div align="center">
+  <img src="./media_12/24.png" alt="12/24" style="zoom:55%;"/>
+</div>
