--- a/19.流水线.md
+++ b/19.流水线.md
@@ -10,6 +10,8 @@
 
 时间上的并行技术
 
+只有大量连续任务不断输入流水线，才能充分发挥流水线的性能。
+
 ### 超标量
 
 空间上的并行技术，一个时钟周期内同时运行多条指令。
@@ -81,3 +83,120 @@
 <div align="center">
   <img src="./media_12/24.png" alt="12/24" style="zoom:55%;"/>
 </div>
+
+## 冒险与阻塞
+
+在指令流水线中，可能会遇到一些情况使得后续指令无法正确执行而引起流水线阻塞，这种现象称为**流水线冒险**，根据导致冒险的原因不同分为**结构冒险**，**数据冒险**，和**控制冒险**。
+
+### 结构冒险
+
+由不同指令在同一时刻争用同一功能部件而形成的冲突，也称**资源冲突**，即由硬件资源竞争造成的冲突。
+
+<div align="center">
+  <img src="./media_13/1.png" alt="13/1" style="zoom:55%;"/>
+</div>
+
+<br/>
+
+比如这里的 **IF** 和 **MEM**，由于都需要使用数据总线，就会导致**结构冒险**，需要使用停顿来错开使用。
+
+<div align="center">
+  <img src="./media_13/2.png" alt="13/2" style="zoom:55%;"/>
+</div>
+
+### 数据冒险
+
+数据冒险也称**数据相关**。
+
+引起数据冒险的原因是，后面指令用到前面指令的结果时，前面指令的结构还没有产生。
+
+#### 解决数据冲突的方法
+
+##### 延迟执行
+
+说白了就是加停顿
+
+```c
+add R1, R2, R3;
+sub R4, R1, R5;
+```
+
+<div align="center">
+  <img src="./media_13/3.png" alt="13/3" style="zoom:55%;"/>
+</div>
+
+**sub**指令在**译码**时候，需要获得 _R1_ 的数据，但 _R1_ 需要在**写回**(WB) 才能确定，所以需要延迟执行。
+
+##### 转发（旁路）技术
+
+设计一个额外的数据通路，将上面流水线过程中的步骤直接转发到下一个流水线中，消灭数据冲突情况。
+
+```c
+add R1, R2, R3;
+sub R4, R1, R5;
+```
+
+按照我们理论上的想象，应该是 **add** 的**EX**结果转发给**sub**的**ID**过程，但实际上是直接转发给**sub**的**EX**过程就行。
+
+这样最直接，还不用给**sub**一个延迟来进行转发。
+
+> 哎，规矩
+
+<div align="center">
+  <img src="./media_13/4.png" alt="13/4" style="zoom:55%;"/>
+</div>
+
+<br/>
+
+```c
+load R2, 12(R1);
+add R4, R3, R2;
+```
+
+所以说转发都是转发给第二层流水线的**EX**阶段。
+
+<div align="center">
+  <img src="./media_13/5.png" alt="13/5" style="zoom:55%;"/>
+</div>
+
+### 控制冒险
+
+> 哪有什么控制，只不过是 PC 的任务罢了。
+
+目前只有一种情况会发生控制冒险，就是在条件跳转，分支指令的时候会发生。
+
+```c
+loop: add R1, R1, 1;
+bne R1, R2, loop;
+```
+
+<br/>
+
+<div align="center">
+  <img src="./media_13/6.png" alt="13/6" style="zoom:55%;"/>
+</div>
+
+<br/>
+
+<div align="center">
+  <img src="./media_13/7.png" alt="13/7" style="zoom:55%;"/>
+</div>
+
+### 大革
+
+**cache**缺失的处理也会引起流水线阻塞。
+
+> 你以为敌人在外面，实际上敌人就是你，就是我，就是我们大家。
+
+### 流水线计算公式
+
+设 **k** 为流水线的段数，$\Delta{t}$为时钟周期，**n**为执行的指令数。
+
+执行的时钟周期数量 $x$ 为：
+
+$$
+x = (k + n - 1) \cdot \Delta{t}
+$$
+
+当 $n \to \infty$ 时，流水线可以达到一个$\Delta{t}$执行完成一条指令。
+当 $n \to \infty$ 时，使用流水线可以加速为原来执行效率的**k**倍。
