--- a/3.中断与DMA与IO中断(朝廷＆江湖).md
+++ b/3.中断与DMA与IO中断(朝廷＆江湖).md
@@ -12,7 +12,9 @@ for (int i = 0, i < 1 GB / 4; i++) {
 }
 ```
 
-至于其中的兴衰荣誉，成王败寇，自不必多说。
+也就是说这种方式需要 CPU 自己完成和等待 IO 任务。非常浪费 CPU 时间，效率低。
+
+所以需要使用**中断**和**DMA**模式来提高 IO 效率。
 
 ## 2. 中断
 
@@ -20,6 +22,8 @@ for (int i = 0, i < 1 GB / 4; i++) {
 
 - DMA中断请求优先于I/O设备传送的中断请求
 - 在I/O传送类中断请求中，高速设备优先于低速设备
+
+> 通过 **INTR** 线发出的是*可屏蔽中断*，通过 **NMI** 线发出的是*不可屏蔽中断*。
 
 ### CPU响应中断的条件
 
@@ -101,3 +105,4 @@ DMA只做一件事——将一段数据从一段内存空间Copy到另一段。
 从数据传送来看，中断方式靠程序传送，DMA方式靠硬件传送
 
 - 或者我们可以说，如果是靠CPU来做的，就是靠程序方式，如果是靠专门的硬件或定制化芯片来做，就是靠硬件方式。
+- 或者我们还可以说，所谓的软件方式，就是依靠“CPU”这个硬件来实现的功能就是*软件方式*
