--- a/4.总线专题（朝廷）.md
+++ b/4.总线专题（朝廷）.md
@@ -1,22 +1,6 @@
 # 总线の春秋
 
-## 1.总线标准（必背doge
-
-### PCI，PCI-E(PCI-Express)
-
-是现在最常用的总线，说白了，咱们电脑内部的总线都是使用的PCI总线，连接显卡，声卡，网卡等。
-
-### USB
-
-通用串行总线，是一种连接外部设备的I/O总线，属于设备总线。
-
-### SATA
-
-是一种一种硬盘接口规范
-
-### ISA总线
-
-南桥芯片负责连接ISA总线和PCI总线，实现传统I/O设备与计算机的连接
+## 1.总线标准（已经寄了
 
 ## 2.串行与并行
 
