--- a/3.中断与DMA与IO中断(朝廷＆江湖).md
+++ b/3.中断与DMA与IO中断(朝廷＆江湖).md
@@ -2,6 +2,18 @@
 
 > 那一年，我二十七岁，他四十六岁。
 
+## 一番言いたいこと
+
+在整个 IO 与 中断 中最值得关心的事情其实只有一个 —— 外部数据的传输速度并不是越大越好
+
+而是需要保证 传输速度 大于 CPU 或者 DMA 的转运速度
+
+要不然新传递来的数据就会被覆盖掉，造成数据丢失。
+
+这其实也解释了为什么 DMA 的中断请求要高于一般的 IO 请求。
+
+因为 DMA 所要进行的数据传输任务是十分紧迫的，传输速度慢了数据可能就会被新来的覆盖掉。
+
 ## 1. I/O 程序查询方式
 
 说白了就是我们最常见的x86汇编的**in/out**操作
@@ -16,7 +28,11 @@ for (int i = 0, i < 1 GB / 4; i++) {
 
 所以需要使用**中断**和**DMA**模式来提高 IO 效率。
 
+其中**中断处理 I/O**属于软件处理方式，而**DMA处理 I/O**属于硬件处理方式。
+
 ## 2. 中断
+
+考研中特别区分了**中断**和**异常**的区别。
 
 ### 中断优先级
 
@@ -30,6 +46,9 @@ for (int i = 0, i < 1 GB / 4; i++) {
 1. 中断源有中断请求
 2. CPU允许中断及开中断（异常和不可屏蔽中断不受此限制）
 3. 一条指令执行完毕（异常不受此限制），且没有更紧迫的任务。
+
+> 为什么一般情况下要保证在指令完成之后再进行中断？
+> 这是保证在中断的条件下，指令的原子性（总不能执行一半就打断吧）
 
 CPU 在每条指令执行结束前，都要发中断查询信号，若有中断请求，则 CPU 进入中断响应阶段。
 
@@ -100,9 +119,11 @@ DMA只做一件事——将一段数据从一段内存空间Copy到另一段。
 
 在DMA访问内存时，CPU或许可以访问内存，或许不可以访问内存，看DMA与CPU的内存访问策略。
 
+但如果 DMA 和 CPU 同时访问内存时，一定是 DMA 优先访问内存，因为 DMA 的任务是传输数据，如果数据没能被及时搬运，就很可能会被新的数据覆盖掉。
+
 ## 5.结语
 
 从数据传送来看，中断方式靠程序传送，DMA方式靠硬件传送
 
 - 或者我们可以说，如果是靠CPU来做的，就是靠程序方式，如果是靠专门的硬件或定制化芯片来做，就是靠硬件方式。
-- 或者我们还可以说，所谓的软件方式，就是依靠“CPU”这个硬件来实现的功能就是*软件方式*
+- 或者我们还可以说，所谓的软件方式，就是依靠“CPU”这个硬件来实现的功能就是*软件方式*，比如靠一般的中断来完成的事情。
