--- a/4.总线专题（朝廷）.md
+++ b/4.总线专题（朝廷）.md
@@ -41,15 +41,49 @@ rep movsb
 
 ### 不互锁方式
 
-传输双方都没有握手动作，请求一段时间后没有回应就撤销，回答一段时间后没有回应就撤销。
+传输双方都没有握手动作，请求一段时间后没有回应就撤销请求信号，回答一段时间后没有回应就撤销回复信号。
+
+> 所谓的信号其实指的就是单纯的高低电平而已。
 
 ### 半互锁方式
 
 传输双方一个以握手方式通信，一个不以握手方式通信。
 
+谁请求通信谁就要一直等待回复信号。
+
 ### 全互锁方式
 
 通信双方都以握手方式通信，而且和TCP不同，没有收到响应就不会撤销等待状态。
+
+<div align="center">
+  <img src="./media_13/8.png" alt="28" style="zoom:40%;"/>
+</div>
+
+## 6.5 异步串行通信方式的特点
+
+### 半同步定时方式
+
+为什么叫**半同步方式**，因为它仍然保留了 _同步定时功能_，地址，命令，数据信号的发送时间都是按照同步时钟进行。
+
+至于说哪里异步，就是多安了一个**Wait 信号线**
+
+半同步设备每隔一段同步时钟后就会采样一下**Wait**信号。
+
+其实就是自己当**Poller**和**Waker**力。
+
+### 分离式定时方式
+
+> 这才是真正的异步
+> 异步
+> 异步
+> 异步
+
+A 获取总线后，把数据和指令传送后就立刻释放总线。
+
+B 在收到数据后，如果也想给 A 传送数据，也会申请总线并获取后传输数据，传输完毕后立刻释放总线，不浪费时间。
+
+- 优点： 在不传输数据时释放总线，使得总线可接受其他设备的请求，不存在空闲等待时间。
+- 缺点： 控制复杂，开销大。
 
 ## 7.南北桥(悲
 
