--- a/12.内存.md
+++ b/12.内存.md
@@ -71,7 +71,7 @@ DRAM 不光每个一段时间就需要刷新一下，而且每次读写之后，
 
 其实没啥用，仍然是串行读取。
 
-> （至少在考研中）一个内存条，只要有一个字节被读写操作，整个内存条，这个硬件都要经过一个t时间的恢复时间之后才能被再次读写。
+> （至少在考研中）一个内存条，只要有一个字节被读写操作，整个内存条，这个硬件都要经过一个`t`时间的恢复时间之后才能被再次读写。
 
 #### 低位交叉编址（交叉方式）
 
