--- a/13.磁盘.md
+++ b/13.磁盘.md
@@ -95,7 +95,7 @@ $$
 | ---------------------------------- | ---------------- |
 | 公平，简单，而且不会发生饥饿和阻塞 | 平均寻道时间过大 |
 
-#### 2. 最短寻找时间优先（Shortes Seek Time First, SSTF）算法
+#### 2. 最短寻找时间优先（Shortest Seek Time First, SSTF）算法
 
 <div align="center">
   <img src="./media_9/30.png" alt="30" style="zoom:50%;"/>
