--- a/17.中央处理器.md
+++ b/17.中央处理器.md
@@ -8,7 +8,7 @@
 
 所以我们也可以解释为什么每个汇编指令的执行周期不一样 —— 因为每个指令的微指令消耗的时钟周期不一样。
 
-无论什么指令执行了之后，都会发生的变化是 —— IP 做了加法，指向了下一条被执行的指令。
+无论什么指令执行了之后，都会发生的变化是 —— PC 做了加法，指向了下一条被执行的指令。
 
 每条指令要被运行时，CPU 都要考虑的是两样东西 —— PC ( IR ) 和 Flag 寄存器 中的内容，这是 CPU 中最重要的两样东西。
 
