--- a/3.中断与DMA与IO中断(朝廷＆江湖).md
+++ b/3.中断与DMA与IO中断(朝廷＆江湖).md
@@ -14,6 +14,12 @@
 
 因为 DMA 所要进行的数据传输任务是十分紧迫的，传输速度慢了数据可能就会被新来的覆盖掉。
 
+<br/>
+
+<div align="center">
+  <img src="./meida_14/ku_2.png" alt="12" style="zoom:40%;"/>
+</div>
+
 ## 1. I/O 程序查询方式
 
 说白了就是我们最常见的x86汇编的**in/out**操作
