--- a/9.浮点数.md
+++ b/9.浮点数.md
@@ -56,7 +56,7 @@ $$
 
 ## 无穷大
 
-如果指数指数全为1，但是尾数全为零, 便是无穷大。
+如果指数全为1，但是尾数全为零, 便是无穷大。
 
 如果符号位是0，为正无穷大。
 
@@ -82,7 +82,7 @@ $$
 - 在单精度中，$\text{bias} = 2^{8 - 1} - 1 = 2^{7} - 1 = 128 - 1 = 127$
 - 在双精度中，$\text{bias} = 2^{11 -1} - 1 = 2^{10} - 1 = 1024 - 1 = 1023$
 
-其中`f`为`feac`表示的数，范围$0 \le f < 1$
+其中`f`为`frac`表示的数，范围$0 \le f < 1$
 
 所以一个规格化的数，具体可以表示为：$V = (-1)^{\text{sign}} \times 1.\text{frac} \times 2^{exp - bias}$
 
